DTSRD-3529. add 2 extra columns in the LOV table