@@ -106,7 +106,7 @@ public class FlagServiceProcessor extends JsrValidationBaseProcessor<FlagService
 
         if (!zeroByteCharacterRecords.isEmpty()) {
             List<Pair<String, Long>> distinctZeroByteCharacterRecords = zeroByteCharacterRecords.stream()
-                .distinct().collect(Collectors.toList());
+                .distinct().toList();
             audit(distinctZeroByteCharacterRecords, exchange, ZERO_BYTE_CHARACTER_ERROR_MESSAGE);
         }
         exchange.getContext().getGlobalOptions().put(FILE_NAME, routeProperties.getFileName());
@@ -114,7 +114,7 @@ public class FlagServiceProcessor extends JsrValidationBaseProcessor<FlagService
 
     }
 
-    public <T> void audit(List<Pair<String, Long>> invalidCategoryIds, Exchange exchange,String message) {
+    public void audit(List<Pair<String, Long>> invalidCategoryIds, Exchange exchange,String message) {
         if (!invalidCategoryIds.isEmpty()) {
             setFileStatus(exchange, applicationContext, FAILURE);
             flagServiceJsrValidatorInitializer.auditJsrExceptions(
